Fix weird scrollbar

--- a/bizarro/static/style.css
+++ b/bizarro/static/style.css
@@ -34,9 +34,9 @@ body h3{
 	font-size:1em;
 }
 .nav{
-	padding-top:0.2em;
+	padding-top:0.2em;	
 	float:right;
-	margin-bottom:4px;
+
 }
 .nav li{
 	display:inline-block;
